compiler/testData/diagnostics/tests/regressions/kt9633.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
// KT-9633: SOE occurred before
interface A<<!FINITE_BOUNDS_VIOLATION!>T : A<in T><!>>